<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:label="@string/title_profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="50dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:id="@+id/setup_display_picture"
            android:onClick="displayPictureOnClick"
            app:srcCompat="@drawable/temporary_display_photo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/setup_profile_age"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/setup_radio_group"
            android:layout_marginBottom="20dp">

            <RadioButton
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/sex_male_option"
                android:id="@+id/setup_radio_male"
                android:checked="false"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sex_female_option"
                android:id="@+id/setup_radio_female"
                android:checked="false"/>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/setup_profile_height"
            android:layout_marginBottom="30dp"
            android:hint="@string/enter_height_hint"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/setup_profile_phone_number"
            android:layout_marginBottom="30dp"
            android:hint="@string/enter_phone_number_hint"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_me"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:inputType="text|textMultiLine"
            android:id="@+id/setup_profile_about_me"
            android:layout_marginBottom="30dp"
            android:gravity="top"
            android:hint="@string/enter_about_me_hint"/>

    </LinearLayout>


</ScrollView>
